# sound-board

./: .gitignore  Cargo.toml  README.md
media/audio/samples/: disclaimer.md
src/: actions.rs  errors.rs  keyboard.rs  main.rs  playback.rs
